turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:11: error: value wlack is not a member of object java.awt.Color
    setCouleurSol(Color.wlack)
                        ^